tests/tools/trip/randomTrips/errors/invalid_vclass_edge-permission/errors.tools
Error: The string 'passengers' doesn't correspond to a legit vehicle class
